# ProgramC

./: .env  ANALIZA_WYDAJNOSCI.md  API_ORDER_STATUS.md  BUILD_INSTRUCTIONS.md  BUILD_STEPS.md  CMakeLists.txt  CMakeLists_optimized.txt  CODE_CLEANUP_REPORT.md  FIX_BUILD_CACHE.md  GUS_API_INTEGRATION_DOC.md  INSTRUKCJA_IMPLEMENTACJI.md  MATERIAL_ORDER_FIXES_COMPLETE.md  MEMORY_MANAGEMENT_FIXES.md  PASSWORD_FIXED.md  PDF_GENERATION_ANALYSIS.md  PODSUMOWANIE_OPTYMALIZACJI.md  PRODUCTION_DEPLOYMENT_GUIDE.md  QUICK_FIX.md  README_SECURITY.md  REFACTOR_STAGE2_REPORT.md  REFACTOR_STAGE3_REPORT.md  SECURITY_MIGRATION_GUIDE.md  TYPO_FIX.md  backup_20250708_174947.json  build_migration.sh  config.ini.deprecated  copy_python_script.ps1  copy_users_file.bat  debug_users.py  ikony_do_podgladu.txt  ikony_do_podgladu_opis.txt  install_python_deps.ps1  main.cpp  mainwindow.cpp  mainwindow.h  migrate_security.cpp  migration_CMakeLists.txt  optymalizacja_wydajnosci.sh  pch.cpp  resources.qrc  (+16 more)
.claude/: settings.local.json
GUS-Regon-UslugaBIRver1.2-dokumentacjaVer1.35/: BIR11-PrzykladoweDane.xml  BIR12_SlownikPKD2025.xlsx
GUS-Regon-UslugaBIRver1.2-dokumentacjaVer1.35/BIR11_StrukturyDanych/02-DanePobierzPelnyRaport/: BIR11-DanePobierzPelnyRaport-KomunikatyOBledach.xml
GUS-Regon-UslugaBIRver1.2-dokumentacjaVer1.35/BIR12_StrukturyDanych/02-DanePobierzPelnyRaport/: BIR12-DanePobierzPelnyRaport-KomunikatyOBledach.xml  BIR12JednLokalnaOsFizycznej.xsd  BIR12JednLokalnaOsFizycznejPkd.xsd  BIR12JednLokalnaOsPrawnej.xsd  BIR12JednLokalnaOsPrawnejPkd.xsd  BIR12OsFizycznaDaneOgolne.xsd  BIR12OsFizycznaDzialalnoscCeidg.xsd  BIR12OsFizycznaDzialalnoscPozostala.xsd  BIR12OsFizycznaDzialalnoscRolnicza.xsd  BIR12OsFizycznaDzialalnoscSkreslonaDo20141108.xsd  BIR12OsFizycznaListaJednLokalnych.xsd  BIR12OsFizycznaPkd.xsd  BIR12OsPrawna.xsd  BIR12OsPrawnaListaJednLokalnych.xsd  BIR12OsPrawnaPkd.xsd  BIR12OsPrawnaSpCywilnaWspolnicy.xsd  BIR12TypPodmiotu.xsd
RegonAPI-1.3.1/: pypi_long.md
RegonAPI-1.3.1/RegonAPI.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
db/: dbconstants.h  dbmanager.cpp  dbmanager.h  migrate_add_name_to_delivery_addresses.sql  migrate_add_status_to_orders.sql  migrate_materials_orders.sql  migrate_sync_used_client_numbers.sql  migrate_used_client_numbers.sql
models/: client.cpp  client.h  deliveryaddress.cpp  deliveryaddress.h  material.h  materials_order.h  order.cpp  order.h  order_sequence.h  orderitem.h  supplier.h  user.cpp  user.h
network/: gusclient.cpp  gusclient.cpp.new  gusclient.h  networkmanager.cpp  networkmanager.h  notificationclient.cpp  notificationclient.h  notificationserver.cpp  notificationserver.h
python/: gus_wrapper.py  gus_wrapper_full.py  gus_wrapper_simple.py
resources/: app.qrc  app_optimized.qrc
utils/: app_constants.h  email_config.cpp  email_config.h  email_sender.cpp  email_sender.h  logger.cpp  logger.h  memory_optimized_manager.h  order_confirmation.py  page_manager.cpp  page_manager.h  password_manager.cpp  password_manager.h  pdf_drawing_helpers.cpp  pdf_drawing_helpers.h  pdf_generator.cpp  pdf_generator.h  pdf_utils.cpp  pdf_utils.h  performance_monitor.h  production_ticket.py  python_pdf_generator.cpp  python_pdf_generator.h  qr_code_generator.cpp  qr_code_generator.h  resource_manager.cpp  resource_manager.h  secure_config.cpp  secure_config.h  secure_user_manager.cpp  secure_user_manager.h  session_manager.cpp  session_manager.h  settings.cpp  settings.h  settings_manager.cpp  settings_manager.h  sidebar_manager.cpp  sidebar_manager.h  stylemanager.cpp  (+2 more)
views/: CMakeLists.txt  client_dialog.cpp  client_dialog.h  client_full_dialog.cpp  client_full_dialog.h  client_select_dialog.cpp  client_select_dialog.h  clients_db_view.cpp  clients_db_view.h  dashboard_view.cpp  dashboard_view.h  delivery_address_dialog.cpp  delivery_address_dialog.h  delivery_addresses_view.cpp  delivery_addresses_view.h  login_dialog.cpp  login_dialog.h  materials_order_dialog.cpp  materials_order_dialog.h  materials_order_form.cpp  materials_order_form.h  materials_orders_db_view.cpp  materials_orders_db_view.h  materials_pdf_page.h  new_order_dialog.cpp  new_order_dialog.h  new_order_view.cpp  new_order_view.h  order_card.cpp  order_card.h  order_dialog.cpp  order_dialog.h  order_notification_dialog.cpp  order_notification_dialog.h  orders_db_view.cpp  orders_db_view.h  pdf_viewer.cpp  pdf_viewer.h  print_dialog.cpp  print_dialog.h  (+10 more)
